--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11330,6 +11330,32 @@ textarea.form-control-lg {
   margin-left: 65px;
 }
 
+.posts .dropdown {
+  float: right;
+}
+
+.posts .dropdown a {
+  color: inherit;
+  text-decoration: inherit;
+  cursor: pointer;
+}
+
+.following h4, .following .h4 {
+  font-weight: 700;
+}
+
+.following a {
+  color: inherit;
+  text-decoration: inherit;
+  cursor: pointer;
+}
+
+.explore a {
+  color: inherit;
+  text-decoration: inherit;
+  cursor: pointer;
+}
+
 .twit-nav ul {
   list-style: none;
 }
